--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 </head>
 <body>
     <div class="head">
-		    <h1>Flexicons</h1>
-		    <p>Flexible icons made using power of CSS</p>
-	  </div>
-	  <div class="icons-area">
-		    <div class="icon-container transparent" style="font-size: ;"><div class="heart"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="folder-empty"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="folder"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="gsicon"></div></div>
+	<h1>Flexicons</h1>
+	<p>Flexible icons made using power of CSS</p>
+    </div>
+    <div class="icons-area">
+	<div class="icon-container transparent" style="font-size: ;"><div class="indian-flag"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="indian-flag"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="indian-flag"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="indian-flag"></div></div>
 
-		    <div class="icon-container transparent" style="font-size: ;"><div class="heart"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="folder-empty"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="folder"></div></div>
-		    <div class="icon-container transparent" style="font-size: ;"><div class="gsicon"></div></div>
-	   </div>
-	   <div class="footer">
-        <h3>Made by REU</h3>
-     </div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="heart"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="folder-empty"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="folder"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="gsicon"></div></div>
+
+	<div class="icon-container transparent" style="font-size: ;"><div class="heart"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="folder-empty"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="folder"></div></div>
+	<div class="icon-container transparent" style="font-size: ;"><div class="gsicon"></div></div>
+    </div>
+    <div class="footer">
+	<h3>Made by REU</h3>
+    </div>
 </body>
 </html>
