--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 	</div>
 	<div class="icons-area">
 		<div class="icon-container" style="font-size: ;"><div class="indian-flag"></div></div>
-		<div class="icon-container" style="font-size: ;"><div class="indian-flag"></div></div>
-		<div class="icon-container" style="font-size: ;"><div class="indian-flag"></div></div>
-		<div class="icon-container" style="font-size: ;"><div class="indian-flag"></div></div>
-
+		<div class="icon-container" style="font-size: ;"><div class="cake"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="heart"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="folder-empty"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="folder"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="gsicon"></div></div>
 
+		<div class="icon-container" style="font-size: ;"><div class="indian-flag"></div></div>
+		<div class="icon-container" style="font-size: ;"><div class="cake"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="heart"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="folder-empty"></div></div>
 		<div class="icon-container" style="font-size: ;"><div class="folder"></div></div>
